Add JS structure

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body class="h-screen bg-gray-800">
-    <%= yield %>
+    <div id="app-root" class="h-full">
+      <%= yield %>
+    </div>
   </body>
 </html>
