--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,4 +1,7 @@
-<div class="pt-16 flex-1">
+<div
+  class="pt-16 flex-1"
+  data-route="site_index"
+>
   <div class="relative overflow-hidden">
     <div class="max-w-screen-xl mx-auto">
       <div class="bg-gray-800 relative z-10 py-16 md:py-24 lg:max-w-2xl lg:w-full lg:py-28 xl:py-32">
