Add search vue component and basic teams new view

--- a/app/frontend/styles/components.scss
+++ b/app/frontend/styles/components.scss
@@ -82,7 +82,16 @@
     @apply rounded-md appearance-none block w-full leading-6 text-gray-700 bg-white bg-opacity-75 border border-gray-400 px-4 py-2;
 
     &:focus {
-      @apply bg-opacity-100;
+      @apply outline-none bg-opacity-100;
+    }
+  }
+
+  // blank state
+  .tw-blank-state {
+    @apply p-8 text-center border border-gray-400 border-dashed rounded-md flex flex-col items-center justify-center;
+
+    @screen lg {
+      @apply px-16;
     }
   }
 }
