--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
 
   <body class="h-screen bg-gray-800">
     <div id="app-root" class="h-full">
+      <%= render 'shared/navbar' %>
+
       <%= yield %>
     </div>
   </body>
