--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -21,9 +21,9 @@
               Find your next hires or project team members and discover how they play together.
             </p>
             <div class="mt-5 md:mt-8 md:flex md:justify-center lg:justify-start">
-              <button type="button" class="tw-btn tw-btn--primary tw-btn--xl">
+              <%= link_to new_team_path, class: 'tw-btn tw-btn--primary tw-btn--xl' do %>
                 Add a team member
-              </button>
+              <% end %>
             </div>
           </div>
         </header>
