improve search component

--- a/app/frontend/packs/application.scss
+++ b/app/frontend/packs/application.scss
@@ -2,5 +2,6 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+@import "styles/dom";
 @import "styles/components";
 @import "styles/slider";
