--- a/app/frontend/styles/components.scss
+++ b/app/frontend/styles/components.scss
@@ -94,4 +94,21 @@
       @apply px-16;
     }
   }
+
+  // menu item
+  .tw-menu-item {
+    @apply flex items-center text-gray-700 rounded-md cursor-pointer;
+
+    &:hover, &:focus {
+      @apply bg-gray-700 outline-none;
+    }
+  }
+
+  .tw-menu-item--sm {
+    @apply px-3 py-1 text-sm;
+  }
+
+  .tw-menu-item--md {
+    @apply px-4 py-2;
+  }
 }
