--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -3,28 +3,54 @@
   data-route="teams_new"
 >
   <div class="tw-container mt-8 md:mt-16">
-    <div class="text-xl md:text-3xl text-white mb-4 md:mb-6">
+    <h2 class="text-xl md:text-3xl text-white mb-4 md:mb-6">
       Build your team
-    </div>
+    </h2>
 
     <div class="lg:grid lg:grid-cols-5 lg:gap-8">
       <div class="col-span-2">
         <search-box
-          placeholder="Search people"
+          placeholder="Search people to add"
           remote_route="https://search.torre.co/people/_search"
+          :on_select_result="addTeamMember"
         ></search-box>
-      </div>
 
-      <div class="mt-8 lg:mt-0 lg:col-span-3">
-        <div class="tw-blank-state h-full">
-          <div class="leading-tight text-gray-300 mb-8 text-lg">You haven't added any team member yet.</div>
+        <template v-if="team.length">
+          <h3 class="text-gray-200 text-lg md:text-xl mt-6">The team</h3>
 
+          <team-list
+            class="mt-4"
+            :team="team"
+          ></team-list>
+        </template>
+
+        <div v-else class="tw-blank-state mt-4">
           <div class="mx-auto">
-            <%= svg_icon 'bx-network-chart', size: '48', class: 'text-gray-500' %>
+            <%= svg_icon 'bx-search-alt', size: '48', class: 'text-gray-500' %>
           </div>
 
           <div class="leading-tight text-gray-400 text-sm mt-8">
             Search people and add them to the team to know how well will they work together.
+          </div>
+        </div>
+
+        <div class="mt-4 md:mt-8" v-if="team.length">
+          <button type="button" class="tw-btn tw-btn--primary tw-btn--lg w-full w-full sm:w-auto">
+            Save team
+          </button>
+        </div>
+      </div>
+
+      <div class="hidden md:block mt-4 lg:mt-0 lg:col-span-3">
+        <div class="tw-blank-state py-16">
+          <div class="leading-tight text-gray-300 mb-8 text-lg">You haven't added any team member yet.</div>
+
+          <div class="mx-auto">
+            <%= svg_icon 'bx-bar-chart', size: '80', class: 'text-gray-500' %>
+          </div>
+
+          <div class="leading-tight text-gray-400 text-sm mt-8">
+            Your team chemistry report will be displayed here.
           </div>
         </div>
       </div>
