--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -15,30 +15,35 @@
           :on_select_result="addTeamMember"
         ></search-box>
 
-        <template v-if="team.length">
-          <h3 class="text-gray-200 text-lg md:text-xl mt-6">The team</h3>
+        <transition mode="out-in" name="v-fade">
+          <div v-if="team.length" key="content-when-team-exist">
+            <h3 class="text-gray-200 text-lg md:text-xl mt-6 leading-tight">The team</h3>
+            <div class="text-gray-400 leading-tight"> {{ team.length }} member{{ team.length > 1 ? 's' : '' }}</div>
 
-          <team-list
-            class="mt-4"
-            :team="team"
-          ></team-list>
-        </template>
+            <team-list
+              class="mt-4"
+              :team="team"
+              :on_delete_team_member="deleteTeamMember"
+              editable
+            ></team-list>
 
-        <div v-else class="tw-blank-state mt-4">
-          <div class="mx-auto">
-            <%= svg_icon 'bx-search-alt', size: '48', class: 'text-gray-500' %>
+            <div class="mt-4 md:mt-8">
+              <button type="button" class="tw-btn tw-btn--primary tw-btn--lg w-full w-full sm:w-auto">
+                Save team
+              </button>
+            </div>
           </div>
 
-          <div class="leading-tight text-gray-400 text-sm mt-8">
-            Search people and add them to the team to know how well will they work together.
-          </div>
-        </div>
+          <div v-else class="tw-blank-state mt-4" key="content-when-team-is-empty">
+            <div class="mx-auto">
+              <%= svg_icon 'bx-search-alt', size: '48', class: 'text-gray-500' %>
+            </div>
 
-        <div class="mt-4 md:mt-8" v-if="team.length">
-          <button type="button" class="tw-btn tw-btn--primary tw-btn--lg w-full w-full sm:w-auto">
-            Save team
-          </button>
-        </div>
+            <div class="leading-tight text-gray-400 text-sm mt-8">
+              Search people and add them to the team to know how well will they work together.
+            </div>
+          </div>
+        </transition>
       </div>
 
       <div class="hidden md:block mt-4 lg:mt-0 lg:col-span-3">
