basic team report (skills)

--- a/app/frontend/packs/application.scss
+++ b/app/frontend/packs/application.scss
@@ -3,6 +3,7 @@
 @import "tailwindcss/utilities";
 
 @import "styles/dom";
+@import "styles/animations";
 @import "styles/components";
 @import "styles/slider";
 @import "styles/vue";
