add routes, controllers and model to save and view teams

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="fixed h-16 border-b border-gray-400 w-full">
+<div class="fixed bg-gray-900 z-50 h-16 border-b border-gray-400 w-full">
   <div class="tw-container">
     <div class="text-white">TeamBuilder</div>
   </div>
