--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -21,13 +21,14 @@
             <div class="flex items-center mt-6">
               <div class="flex-1 mr-4">
                 <h3 class="text-gray-200 text-lg md:text-xl leading-tight">The team</h3>
-                <div class="text-gray-400 leading-tight"> {{ team.length }} member{{ team.length > 1 ? 's' : '' }}</div>
+                <div class="text-gray-400 leading-tight"> {{ team.length }}/20 member{{ team.length > 1 ? 's' : '' }}</div>
               </div>
 
               <button
                 type="button"
                 class="tw-btn tw-btn--primary tw-btn--md rounded-full flex-shrink-0"
                 :disabled="loading"
+                @click="saveTeam"
               >
                 Save and finish
               </button>
@@ -53,10 +54,10 @@
         </transition>
       </div>
 
-      <div class="hidden md:block mt-4 lg:mt-0 lg:col-span-3 md:pl-8 md:border-l md:border-gray-700">
+      <div class="mt-8 lg:mt-0 lg:col-span-3 pt-8 md:pt-0 md:pl-8 border-t md:border-t-0 md:border-l border-gray-700">
         <transition mode="out-in" name="v-fade">
           <div v-if="team.length" key="content-when-team-exist">
-            <h3 class="text-primary-500 text-lg md:text-2xl leading-tight mb-8">
+            <h3 class="text-primary-500 text-xl md:text-2xl leading-tight mb-8">
               How does this team play?
             </h3>
 
