--- a/app/frontend/packs/application.scss
+++ b/app/frontend/packs/application.scss
@@ -1,9 +1,11 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+@import "nprogress/nprogress";
 
-@import "styles/dom";
+@import "styles/utils";
 @import "styles/animations";
 @import "styles/components";
 @import "styles/slider";
 @import "styles/vue";
+@import "styles/nprogress";
