--- a/app/frontend/styles/components.scss
+++ b/app/frontend/styles/components.scss
@@ -34,10 +34,10 @@
   }
 
   .tw-btn--secondary {
-    @apply bg-primary-100 text-primary-500;
+    @apply text-primary-500 border border-primary-400;
 
     &:hover {
-      @apply bg-primary-200 text-primary-600;
+      @apply bg-primary-900;
     }
   }
 
