add show view for report

--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -1,8 +1,8 @@
 <div
-  class="tw-section"
+  class="tw-section h-full"
   data-route="teams_new"
 >
-  <div class="tw-container mt-8 md:mt-16">
+  <div class="tw-container pt-8 md:pt-12 h-full">
     <h2 class="text-xl md:text-3xl text-white mb-4 md:mb-6">
       Build your team
     </h2>
@@ -30,7 +30,7 @@
                 :disabled="loading"
                 @click="saveTeam"
               >
-                Save and finish
+                Save and finish<%= svg_icon 'bx-check', size: '20', class: 'ml-2' %>
               </button>
             </div>
 
@@ -68,7 +68,7 @@
                   v-if="loading"
                   class="bg-gray-900 flex flex-col items-center justify-center rounded-md min-h-96 w-full"
                 >
-                  <div class="text-gray-200 text-lg mb-16 animate-pulse">Updating report</div>
+                  <div class="text-gray-200 text-lg mb-16">Updating report</div>
                   <helix-loader></helix-loader>
                   <div class="text-gray-400 mt-16 animate-pulse">Mixing genome</div>
                 </div>
