--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -48,4 +48,9 @@
       </div>
     </transition>
   </div>
+
+  <share-modal
+    :open.sync="share_modal_open"
+    :share_description="team_share_description"
+  ></share-modal>
 </div>
