--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>Torre Team Builder - Build your dream team from Torre</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <%= render 'application/favicon' %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
